<resources>
    <string name="app_name">InfoPedia</string>
    <string name="welcome_text">Welcome!!!!!!!\n Ready for some updates!!</string>
    <string name="app_logo">Info\nPedia</string>
    <string name="app_logo1">Info</string>
    <string name="app_logo2">Pedia</string>
    <string name="second_screen_text1">My job is to keep you updated with the latest Coding contests, Hackathons, events, Meet up, courses related to Computer science.</string>
    <string name="Screen2_text2">So, What do you want to look at first?</string>
    <string name="screen2_item1">Hackathons</string>
    <string name="screen2_item2">Coding contests</string>
    <string name="screen2_item3">Events</string>
    <string name="screen2_item4">Meet Up</string>
    <string name="screen2_item5">Courses</string>
    <string name="screen2_item6">TECH NEWS</string>
    <string name="transition_text">Generating $requested_event list for you interest</string>
    <string name="Org_name1">Google</string>
    <string name="org_desc1">Kickstart July round is about to start..Let\'s prepare</string>
    <string name="org_name2">IBM</string>
    <string name="org_desc2">Amid coronavirus pendamic IBM organises a real life problem solving competition</string>
    <string name="org_name3">SAP</string>
    <string name="org_desc3">SAP comes again with its annual hackathon with new challenges and rewards</string>
    <string name="org_name4">Honda</string>
    <string name="org_desc4">Dare2Complete Honda online Hackathon is live now</string>
    <string name="back2_menu">Wanna check some thing else</string>
    <string name="menu_text">Pick your choice</string>
    <string name="title_activity_events">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="event_title">Events</string>
    <string name="event_1">Microsoft</string>
    <string name="event_1desc">Microsoft is going to organise  a live webinar on Azure very soon.</string>
    <string name="event_2">Google</string>
    <string name="event_2desc">Google Devfest 2020 seems to be delayed because of coronavirus.</string>
    <string name="event_3">TCS</string>
    <string name="event_3desc">TCS continuously hosting webinars on technical topics to benifits students in this lockdown.</string>
    <string name="event_4">Infosys</string>
    <string name="event_4desc">Infosys hiring process is going to start as InFYTQ result has been declared</string>
    <string name="news1_desc">Tech Giant Google have not stopped hiring amid COVID-19</string>
    <string name="news2_desc">IBM provided free access to its cloud service for 2 months</string>
    <string name="news4">Oracle</string>
    <string name="news4_desc">Professional cloud certifications exams are available for free till lockdown along with learning resources</string>
    <string name="meet1">Infosys</string>
    <string name="meet1_desc">The next InFYTQ winner seminar and hiring process is supposed to be begin in the month of September</string>
    <string name="meet2">Dare2Complete</string>
    <string name="meet2_desc">The new Egnite chapter of Dare2Complete is here and forms are avialable till June 2020</string>
    <string name="meet3">GeeksforGeeks</string>
    <string name="meet3_desc">Campus Ambassdor program of GfG is going to end soon</string>
    <string name="meet4_desc">The winner of Honda Hackathon will be invited at its Mumbai main office</string>
    <string name="cc1">Codechef</string>
    <string name="cc1_desc">"Codechef launches weekly DSA practice challenges to engage students during lockdown "</string>
    <string name="cc2">HackerEarth</string>
    <string name="cc2_desc">"New coding challenges for daily practice launched by Hackerearth "</string>
    <string name="cc3">GeeksforGeeks</string>
    <string name="cc3_desc">Companies specific coding questions are made available for free by GfG</string>
    <string name="cc4_desc">Honda is coming up with exiting new challenges and rewards soon</string>
    <string name="course1">Google</string>
    <string name="course1_desc">Google launches 1 month learning program on Kotlin for Android Development</string>
    <string name="course2">Nasscom</string>
    <string name="course2_desc">Nasscom releases foundation AI course on Skill UP website for free amid lockdown</string>
    <string name="course3">GeeksforGeeks</string>
    <string name="course3_desc">GfG made its Amazon SDE test series free for limited time</string>
    <string name="course4">AICTE</string>
    <string name="course4_desc">Indian Technical Education board AICTE collaborated with many online learning platforms to offer variety of free courses amid lockdown</string>
</resources>